Fix Gap

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ th {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 10px;
+  gap: 8px;
 }
 
 .takaa,
